@@ -19,6 +19,7 @@ Agregada Configuración para forzar el modo CHR$ 128 en ZX81
 Agregada función de búsqueda para buscar entradas del menú.
 Agregado tipo de archivos .zmenu para lanzar archivos
 Agregado mas antiguos programas/juegos mios de Spectrum
+Agregado Debug Sensors SPK & MIC Bit del puerto FEH
 
 * Mejoras:
 
